# Snippets

./: .gitignore  .gitmodules  2d binary indexed tree.txt  CMakeLists.txt  New Text Document.txt  README.md  Snippets.exe.stackdump  binary indexed tree.txt  binary search.txt  disjoint set.txt  gcd.txt  input_formats.h  longest increasing subsequence.txt  main.cpp  querying prefix sum arrays.txt  rand.h  requirements.txt  segment tree with lazy propogation.txt  segment tree.txt  stdincludes.h  template.h  template2.h  template_minimalist.h  util.h  whomax.txt
algorithms/: LCA (Euler Tour).txt  bfs.txt  choose and probability.txt  dijkstra.txt  fast pow (logn x^y).txt  modular arithmetic operations.txt  topological sort (longest path in DAG).txt  topological sort.txt
data structures/: 2d binary indexed tree.txt  LCA (binary lifting).txt  disjoint set (path compression).txt  policy based order statistic tree.txt  segment tree (node based).txt  segment tree with lazy propogation.txt  sparse table.txt  square root decomp (dmpg 18 silver P5).txt  treap v2.5 (order statistics tree).txt  trie.txt
ds/: all.h  bit.h  fast_clear_array.h  segment_tree.h  sparse_table.h  static_deque.h  static_stack.h  treap.h  treap_implicit.h  treap_order_statistics.h
graph/: all.h  articulation_points.h  bfs.h  bridges.h  centroid_decomposition.h  dijkstra.h  flat_graph.h  graph.h  scc.h  topological_sort.h  topological_sort_no_transpose.h
graph-ds/: all.h  union_find.h
graph_ds/: all.h  lca_binary_lift.h  lca_euler.h  union_find.h
math/: all.h  choose.h  extended_euclidian_algorithm.h  (+7 more)
(+82 files in other folders)
